--- a/lab4/inc/lab4/alu_control_summary.html
+++ b/lab4/inc/lab4/alu_control_summary.html
@@ -2,16 +2,16 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>my_alu Project Status (05/01/2015 - 23:30:20)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>alu_control Project Status (05/15/2015 - 09:57:51)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
-<TD>lab2_alu.xise</TD>
+<TD>lab4.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
 <TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
-<TD>my_alu</TD>
+<TD>alu_control</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
 <TD>Synthesized</TD>
 </TR>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.5</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab2/lab2_alu\_xmsgs/*.xmsgs?&DataKey=Warning'>99 Warnings (0 new)</A></TD>
+<TD ALIGN=LEFT>No Warnings</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -43,7 +43,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
 <TD>
-<A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab2/lab2_alu\my_alu_envsettings.html'>
+<A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab4/inc/lab4\alu_control_envsettings.html'>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
@@ -57,35 +57,20 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='4'><B>Device Utilization Summary (estimated values)</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DeviceUtilizationSummary(estimatedvalues)"><B>[-]</B></a></TD></TR>
 <TR ALIGN=CENTER BGCOLOR='#FFFF99'>
 <TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD COLSPAN='2'><B>Utilization</B></TD></TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
-<TD ALIGN=RIGHT>47</TD>
-<TD ALIGN=RIGHT>301440</TD>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
+<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>150720</TD>
 <TD ALIGN=RIGHT COLSPAN='2'>0%</TD>
 </TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>23532</TD>
-<TD ALIGN=RIGHT>150720</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>15%</TD>
-</TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>35</TD>
-<TD ALIGN=RIGHT>23544</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>4</TD>
 <TD ALIGN=RIGHT COLSPAN='2'>0%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded IOBs</TD>
-<TD ALIGN=RIGHT>107</TD>
+<TD ALIGN=RIGHT>12</TD>
 <TD ALIGN=RIGHT>600</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>17%</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFG/BUFGCTRL/BUFHCEs</TD>
-<TD ALIGN=RIGHT>1</TD>
-<TD ALIGN=RIGHT>176</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>0%</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of DSP48E1s</TD>
-<TD ALIGN=RIGHT>2</TD>
-<TD ALIGN=RIGHT>768</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>0%</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>2%</TD>
 </TR>
 </TABLE>
 
@@ -99,7 +84,7 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab2/lab2_alu\my_alu.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri May 1 23:57:35 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab2/lab2_alu\_xmsgs/xst.xmsgs?&DataKey=Warning'>99 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab4/inc/lab4\alu_control.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri May 15 09:57:50 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD>Translation Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Map Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Place and Route Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
@@ -110,9 +95,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab2/lab2_alu\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri May 1 23:58:25 2015</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/cathy/Documents/UCR/spring2015/CS161L/lab4/inc/lab4\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri May 15 10:06:14 2015</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 05/15/2015 - 09:31:36</center>
+<br><center><b>Date Generated:</b> 05/15/2015 - 10:09:26</center>
 </BODY></HTML>
